--- a/codigo-fonte/api-barao/src/main/resources/application.properties
+++ b/codigo-fonte/api-barao/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-# Nome da Aplicação
+# Nome da AplicaÃ§Ã£o
 spring.application.name=BaraoEcommerce
 
-# --- Configuração do Banco de Dados ---
+# --- ConfiguraÃ§Ã£o do Banco de Dados ---
 # username
 spring.datasource.username=root
 
 # password
 spring.datasource.password=root
 
-# URL e Timezone de Belém
+# URL e Timezone de BelÃ©m
 spring.datasource.url=jdbc:mysql://localhost:3306/db_barao?useTimezone=true&serverTimezone=America/Belem
 
-# --- Configuração do JPA / Hibernate (Spring Boot 3) ---
+# --- ConfiguraÃ§Ã£o do JPA / Hibernate (Spring Boot 3) ---
 # Mostra os comandos SQL no console
 spring.jpa.show-sql=true
 
-# Formata o SQL para ficar mais legível
+# Formata o SQL para ficar mais legÃ­vel
 spring.jpa.properties.hibernate.format_sql=true
 
 # Cria/Atualiza as tabelas do banco automaticamente
