--- a/codigo-fonte/api-barao/src/main/resources/application.properties
+++ b/codigo-fonte/api-barao/src/main/resources/application.properties
@@ -1,23 +1,20 @@
-# Nome da AplicaÃ§Ã£o
+# Nome da Aplicação
 spring.application.name=BaraoEcommerce
 
-# --- ConfiguraÃ§Ã£o do Banco de Dados ---
-# username
-spring.datasource.username=root
+# --- Configuração do Banco de Dados ---
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
 
-# password
-spring.datasource.password=root
-
-# URL e Timezone de BelÃ©m
-spring.datasource.url=jdbc:mysql://localhost:3306/db_barao?useTimezone=true&serverTimezone=America/Belem
-
-# --- ConfiguraÃ§Ã£o do JPA / Hibernate (Spring Boot 3) ---
-# Mostra os comandos SQL no console
+# --- Configuração do JPA / Hibernate ---
 spring.jpa.show-sql=true
-
-# Formata o SQL para ficar mais legÃ­vel
 spring.jpa.properties.hibernate.format_sql=true
-
-# Cria/Atualiza as tabelas do banco automaticamente
 spring.jpa.hibernate.ddl-auto=update
 
+# --- Configuração do Bot Telegram ---
+telegrambot_chat_id=${TELEGRAM_CHAT_ID}
+telegrambot_url=${TELEGRAM_BOT_URL}
+telegrambot_msg=Olá! O sistema Barão Ecommerce registrou uma nova venda. Número do Pedido: %PED%. Verifique no painel administrativo.
+
+# --- Caminho para Upload de Arquivos ---
+app.upload.dir=${UPLOAD_DIR}
