Fix: Correção de NullPointer no PedidoService e Ajuste de Segurança (403 Forbidden). Feat: Atualização completa da documentação do projeto.

--- a/codigo-fonte/api-barao/src/main/resources/application.properties
+++ b/codigo-fonte/api-barao/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 # --- Configuração do Bot Telegram ---
 telegrambot_chat_id=${TELEGRAM_CHAT_ID}
 telegrambot_url=${TELEGRAM_BOT_URL}
-telegrambot_msg=Olá! O sistema Barão Ecommerce registrou uma nova venda. Número do Pedido: %PED%. Verifique no painel administrativo.
+telegrambot_msg=Oi! O sistema Barao Ecommerce registrou uma nova venda. Numero do Pedido: %PED%. Verifique no painel administrativo.
 
 # --- Caminho para Upload de Arquivos ---
 app.upload.dir=${UPLOAD_DIR}
